--- a/feedback.css
+++ b/feedback.css
@@ -8,7 +8,7 @@ body{
 	padding: 0px 0px;
 	border: none;
 }
-div.feedBackErrorMessage{
+div.feedbackErrorMessage{
 	width: 100%;
 	height: 30px;
 	font-size: 20px;
@@ -17,14 +17,14 @@ div.feedBackErrorMessage{
 	background-color: #df7514;
 	color: white;
 	z-index: 9999;
-	position: absolute;
+	position: fixed;
 	top: -200px;
 	left: 0px;
 	padding: 0px 0px;
 	margin: 0px 0px;
 	border: none; 
 }
-div.feedBackSuccessMessage{
+div.feedbackSuccessMessage{
 	width: 100%;
 	height: 30px;
 	font-size: 20px;
@@ -33,7 +33,7 @@ div.feedBackSuccessMessage{
 	background-color: #3c3;
 	color: #fff;
 	z-index: 9999;
-	position: absolute;
+	position: fixed;
 	top: -200px;
 	left: 0px;
 	padding: 0px 0px;
